# technopark_c-cpp_homework1

./: ..travlanguage:.swp  .c.swp  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  run_cppcheck.sh  run_valgrind.sh  test
data/: compositions.txt  user_input.txt
project/: main.c
project/include/: compilation.h  composition.h  dataloader.h  misc.h  playlist.h  processing.h
project/src/: compilation.c  composition.c  dataloader.c  main.c  misc.c  playlist.c  processing.c
test/: compilation.cpp  composition.cpp  dataloader.cpp  playlist.cpp  processing.cpp  tests_gtest.cpp
test/data/: comp_ok.txt  user_input_err1.txt  user_input_err2.txt  user_input_err3.txt
